--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "express": "^5.1.0",
     "file-type": "^21.0.0",
     "framer-motion": "^12.23.16",
+    "geoip-lite": "^1.4.10",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "mysql2": "^3.14.5",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
     "postcss": "^8.5.6",
@@ -37,8 +39,10 @@
     "react-easy-crop": "^5.5.3",
     "react-router-dom": "^7.9.1",
     "react-toastify": "^11.0.5",
+    "request-ip": "^3.3.0",
     "sharp": "^0.34.4",
     "tailwindcss": "^4.1.13",
+    "ua-parser-js": "^2.0.6",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
