--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "sharp": "^0.34.4",
     "tailwindcss": "^4.1.13",
     "ua-parser-js": "^2.0.6",
+    "uuid": "^13.0.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
