--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "tailwindcss": "^4.1.13",
     "ua-parser-js": "^2.0.6",
     "uuid": "^13.0.0",
+    "vite-plugin-pwa": "^1.1.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
