--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "geoip-lite": "^1.4.10",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.552.0",
     "multer": "^2.0.2",
     "mysql2": "^3.14.5",
     "node-fetch": "^3.3.2",
@@ -36,6 +37,7 @@
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-dropzone": "^14.3.8",
     "react-easy-crop": "^5.5.3",
     "react-router-dom": "^7.9.1",
     "react-toastify": "^11.0.5",
