--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "MIT",
+  "license": "AGPL-3.0",
   "description": "",
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.13",
@@ -32,6 +32,7 @@
     "lucide-react": "^0.552.0",
     "multer": "^2.0.2",
     "mysql2": "^3.14.5",
+    "nanoid": "^5.1.6",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
@@ -46,7 +47,6 @@
     "sharp": "^0.34.4",
     "tailwindcss": "^4.1.13",
     "ua-parser-js": "^2.0.6",
-    "uuid": "^13.0.0",
     "vite-plugin-pwa": "^1.1.0",
     "zustand": "^5.0.8"
   },
