--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "react-toastify": "^11.0.5",
     "request-ip": "^3.3.0",
     "sharp": "^0.34.4",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.13",
     "ua-parser-js": "^2.0.6",
     "vite-plugin-pwa": "^1.1.0",
