--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
     "react-easy-crop": "^5.5.3",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.1",
+    "react-syntax-highlighter": "^16.1.0",
     "react-toastify": "^11.0.5",
     "request-ip": "^3.3.0",
     "sharp": "^0.34.4",
