--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "chalk": "^5.6.2",
     "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
+    "dompurify": "^3.3.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "file-type": "^21.0.0",
     "framer-motion": "^12.23.16",
     "geoip-lite": "^1.4.10",
     "handlebars": "^4.7.8",
+    "jsdom": "^27.2.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.552.0",
     "multer": "^2.0.2",
