--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.13.1",
     "bcrypt": "^6.0.0",
     "chalk": "^5.6.2",
+    "chart.js": "^4.5.1",
     "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
     "dompurify": "^3.3.0",
@@ -42,6 +43,7 @@
     "nodemon": "^3.1.10",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.1",
     "react-dropzone": "^14.3.8",
     "react-easy-crop": "^5.5.3",
