--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "description": "",
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.13",
+    "@tanstack/react-virtual": "^3.13.13",
     "autoprefixer": "^10.4.21",
     "axios": "^1.13.1",
     "bcrypt": "^6.0.0",
