--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-router-dom": "^7.9.1",
     "react-syntax-highlighter": "^16.1.0",
     "react-toastify": "^11.0.5",
+    "react-virtuoso": "^4.17.0",
     "request-ip": "^3.3.0",
     "sharp": "^0.34.4",
     "socket.io": "^4.8.1",
