--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "AGPL-3.0",
   "description": "",
   "dependencies": {
+    "@lexical/code": "^0.39.0",
+    "@lexical/react": "^0.39.0",
     "@tailwindcss/postcss": "^4.1.13",
     "@tanstack/react-virtual": "^3.13.13",
     "autoprefixer": "^10.4.21",
@@ -35,6 +37,7 @@
     "isomorphic-dompurify": "^2.33.0",
     "jsdom": "^27.2.0",
     "jsonwebtoken": "^9.0.2",
+    "lexical": "^0.39.0",
     "lucide-react": "^0.552.0",
     "multer": "^2.0.2",
     "mysql2": "^3.14.5",
