--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cookie-parser": "^1.4.7",
     "dompurify": "^3.3.0",
     "dotenv": "^17.2.2",
+    "emoji-picker-react": "^4.16.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.2.1",
     "file-type": "^21.0.0",
