--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.0.2",
+    "baseline-browser-mapping": "^2.9.17",
     "concurrently": "^9.2.1",
     "vite": "^7.1.5"
   }
