--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
+    "p-limit": "^7.3.0",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.1",
